# LLanguage

./: .gitignore  CMakeLists.txt  README.md  source.ll
LLanguage/: LLanguage.sln  LLanguage.vcxproj  LLanguage.vcxproj.filters
LLanguage.xcodeproj/: project.pbxproj
LLanguage.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
LLanguageUnitTest/: tests_main.cpp
LLanguageUnitTest/scripts/: function.ll
include/: backend_cpp_header.h  compile_tree_to_cpp.h  compile_tree_to_js.h  compiler_tree_to_vm.h  compiler_utilities.h  config.h  gc.h  l_class_wrapper.h  l_exception.h  l_function_wrapper.h  l_gc.h  l_io_lib.h  l_lib_base.h  l_object.h  l_program_language.h  l_string.h  l_variable.h  object.h  parser.h  program_language.h  syntactic_tree.h  variable.h  variables_context.h  vector.h
include/vm/: l_array.h  l_call_context.h  l_class.h  l_commands.h  l_compiler_tree_to_vm.h  l_compiler_utilities.h  l_function.h  l_gc.h  l_iterator.h  l_lib_base.h  l_math_lib.h  l_object.h  l_opcode.h  l_os_lib.h  l_parser.h  l_ref.h  l_syntactic_tree.h  l_table.bak.h  l_table.h  l_thread.h  l_variable.h  l_variables_context.h  l_vector.h  l_vm.h  l_xrange.h  vm.h
l/: CMakeLists.txt
l/src/: main.cpp
llib/: CMakeLists.txt  FindLLIB.cmake
llib/include/: l_array.h  l_attribute.h  l_base_lib.h  l_call_context.h  l_class.h  l_class_wrapper.h  l_compiler_tree_to_vm.h  l_compiler_utilities.h  l_exception.h  l_function.h  l_function_wrapper.h  l_io_lib.h  l_math_lib.h  l_meta_help.h  l_object.h  l_parser.h  l_string.h  l_syntactic_tree.h  l_table.h  l_thread.h  l_variable.h  l_variables_context.h  l_vm.h  l_xrange.h
llib/src/: l_array.cpp  l_base_lib.cpp  l_call_context.cpp  l_class.cpp  l_compiler_tree_to_vm.cpp  l_compiler_utilities.cpp  l_function.cpp  l_gc.cpp  l_io_lib.cpp  l_math_lib.cpp  l_object.cpp  l_opcode.cpp  l_os_lib.cpp  l_parser.cpp  l_thread.cpp  l_variable.cpp  l_variables_context.cpp  l_vm.cpp
samples/: access_oop_test.ll  def.ll  def2.ll  def3.ll  fields.ll  file.ll  for.ll  for2.ll  for3.ll  lambda_function.ll  logic_ops.ll  oop_overload_op.ll  oop_test.ll  runtimeerrors.ll  slow_test.ll  staments.ll  this.ll  while.ll
src/: main.cpp
src/vm/: gc.cpp  l_attribute.cpp  l_base_lib.cpp  l_call_context.cpp  l_class.cpp  l_compile_tree_to_cpp.cpp  l_compile_tree_to_js.cpp  l_compiler_tree_to_vm.cpp  l_compiler_utilities.cpp  l_function.cpp  l_gc.cpp  l_io_lib.cpp  l_lib_base.cpp  l_math_lib.cpp  l_object.cpp  l_opcode.cpp  l_os_lib.cpp  l_parser.cpp  l_string.cpp  l_table.cpp  l_thread.cpp  l_variable.cpp  l_variables_context.cpp  l_vm.cpp  object.cpp  vm.cpp
tests/: CMakeLists.txt  def.ll  def2.ll  for.ll  lambda_function.ll  logic_ops.ll  runtimeerrors.ll  tests_main.cpp
tests/scripts/: function.ll
tests/src/: tests_main.cpp
